# go-protoparser

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel-bazel-build  bazel-bin  bazel-out  bazel-testlogs  comment.go  comment_test.go  enum.go  enum_test.go  enumfield.go  enumfield_test.go  field.go  field_test.go  go.mod  lex.go  message.go  message_test.go  oneof.go  oneof_test.go  option.go  option_test.go  package.go  package_test.go  parser.go  protoparser.go  protoparser_test.go  rpc.go  rpc_test.go  service.go  service_test.go  type.go  type_test.go  util_test.go
.circleci/: config.yml  install_dep.sh
.github/workflows/: ci.bazelrc  install_dep.sh  lint-and-test.yml
_example/: main.go
_example/dump/: BUILD  BUILD.bazel  main.go
_testdata/: BUILD.bazel  cloudEndpoints.proto  extension_declaration.proto  parser.proto  simple.proto  simpleWithComments.proto  simplev2.proto
_testdata/double_semicolon_issue84/: main.go
errors/: parse.go
internal/config_test/: config.go
internal/lexer/: constant.go  constant_test.go  emptyStatement.go  emptyStatement_test.go  enumType.go  enumType_test.go  error.go  fullIdent.go  fullIdent_test.go  lexer.go  lexer2.go  messageType.go  messageType_test.go
internal/lexer/scanner/: comment.go  error.go  floatLit.go  lettersdigits.go  mode.go  position.go  position_test.go  quote.go  scanner.go  scanner_test.go  strLit.go  token.go
internal/parser/: error.go  field.go  field_test.go  import.go  import_test.go  mapField_test.go  oneof_test.go  option.go  option_test.go  package_test.go  parser.go  reserved.go  reserved_test.go  syntax_test.go
internal/util_test/: BUILD.bazel
interpret/unordered/: BUILD.bazel  enum.go  enum_test.go  extend.go  message.go  message_test.go  proto.go  proto_test.go  service.go  service_test.go
issues/: error.go
lexer/: BUILD  constant.go  constant_test.go  emptyStatement.go  emptyStatement_test.go  enumType.go  enumType_test.go  fullIdent.go  fullIdent_test.go  lexer.go  messageType.go  messageType_test.go
lexer/scanner/: BUILD.bazel  boolLit.go  comment.go  eof.go  error.go  ident.go  numberLit.go  position.go  position_test.go  scanner.go  scanner_test.go  token.go
parser/: BUILD  comment.go  comment_test.go  declaration.go  declaration_test.go  edition.go  edition_test.go  emptyStatement.go  enum.go  enum_test.go  error.go  extend.go  extend_test.go  extensions.go  extensions_test.go  field.go  field_test.go  groupField.go  groupField_test.go  import.go  import_test.go  inlineComment.go  inlineComment_test.go  mapField.go  mapField_test.go  message.go  message_test.go  oneof.go  oneof_test.go  option.go  option_test.go  package.go  package_test.go  parser.go  proto.go  proto_accept_test.go  proto_test.go  reserved.go  reserved_test.go  service.go  (+5 more)
parser/meta/: BUILD  error.go  meta.go  position.go  position_test.go
