load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go-protoparser",
    srcs = ["protoparser.go"],
    importpath = "github.com/yoheimuta/go-protoparser/v4",
    visibility = ["//visibility:public"],
    deps = [
        "//interpret/unordered",
        "//lexer",
        "//parser",
    ],
)
